<resources>
    <string name="app_name">Flood Monitoring</string>

    <string name="menu_warnings_and_alerts">Warnings and Alerts API</string>
    <string name="menu_warnings_and_alerts_demo">Warnings and Alerts Demo</string>
    <string name="menu_measurement_stations">Measurement Stations API</string>
    <string name="menu_three_day_forecast">3 Day Forecast API</string>
    <string name="menu_measurement_stations_demo">Measurement Stations Demo</string>

    <string name="get_all_label">All flood warnings and alerts</string>
    <string name="get_all_path">/floods</string>
    <string name="get_all_button">Get Warnings</string>

    <string name="get_min_severity_label">Flood warnings and alerts above severity (lower values are more severe)</string>
    <string name="get_min_severity_path">/floods?min-severity={minSeverity}</string>
    <string name="severity_hint">Severity Level</string>
    <string name="get_min_severity_button">Get Warnings</string>

    <string name="get_county_label">Flood warnings and alerts for specific county</string>
    <string name="get_county_path">/floods?county={county}</string>
    <string name="get_county_button">Get Warnings for County</string>

    <string name="get_location_label">Flood warnings and alerts based on location</string>
    <string name="get_location_path">/floods?lat={latitude}&amp;long={longitude}&amp;dist={distance}</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="distance_hint">Distance</string>
    <string name="get_location_button">Get Warnings for Location</string>

    <string name="get_three_day_label">3 Day Forecast</string>
    <string name="get_forecast_image_label">Forecast Image</string>
    <string name="get_forecast_image_button">Get Images</string>

    <string name="get_all_stations_label">All Stations</string>
    <string name="get_all_station_path">/stations</string>
    <string name="get_all_stations_button">Get Stations</string>
    <string name="get_stations_county_label">Stations for specific county</string>
    <string name="get_stations_county_path">/stations?county={county}</string>
    <string name="get_stations_county_button">Get Stations for County</string>
    <string name="get_stations_location_label">Stations based on location</string>
    <string name="get_stations_location_path">/stations?lat={latitude}&amp;long={longitude}&amp;dist={distance}</string>
    <string name="get_stations_location_button">Get Stations for Location</string>
</resources>
