<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eu.fiskur.floodmonitoringharness.AlertsActivity">

    <ScrollView
        android:id="@+id/nav_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/api_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_all_label"
                        android:textSize="@dimen/header"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_all_path"
                        android:textSize="@dimen/path"/>

                    <Button
                        android:id="@+id/get_all_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_all_button" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_min_severity_label"
                        android:textSize="@dimen/header"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_min_severity_path"
                        android:textSize="@dimen/path"/>

                    <EditText
                        android:id="@+id/min_severity_edit"
                        android:hint="@string/severity_hint"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                    <Button
                        android:id="@+id/get_min_severity_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_min_severity_button" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_county_label"
                        android:textSize="@dimen/header"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_county_path"
                        android:textSize="@dimen/path"/>

                    <Spinner
                        android:id="@+id/county_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/get_county_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_county_button" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_location_label"
                        android:textSize="@dimen/header"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_location_path"
                        android:textSize="@dimen/path"/>

                    <EditText
                        android:id="@+id/location_latitude_edit"
                        android:hint="@string/latitude_hint"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                    <EditText
                        android:id="@+id/location_longitude_edit"
                        android:hint="@string/longitude_hint"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                    <EditText
                        android:id="@+id/location_distance_edit"
                        android:hint="@string/distance_hint"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                    <Button
                        android:id="@+id/get_location_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_location_button" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/log_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/log_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="@dimen/log" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/log_clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Clear" />

                <Button
                    android:id="@+id/log_close_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Close" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

