<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/three_day_forecast_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_three_day_forecast" />

        <Button
            android:id="@+id/warnings_and_alerts_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_warnings_and_alerts" />

        <Button
            android:id="@+id/measurment_stations_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_measurement_stations" />
    </LinearLayout>
</ScrollView>